[INFER] Don't resolve NAME accesses which are on the DeclEnv of named lambdas, bug 685313.